@@ -1,2 +1,13 @@
 # DAFNE
 This repository contains a code of the DAFNE, a tool that utilizes rulles, subgroups and redescriptions to create features for classification tasks.
+
+VM options: 
+
+-Xmx15000m -Xms15000m  --add-opens=java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED
+
+This source code acompanies the publication: 
+
+1. Mihelčić, M., Šmuc, T. (2023). Rules, Subgroups and Redescriptions as Features in Classification Tasks. In: , et al. Machine Learning and Principles and Practice of Knowledge Discovery in Databases. ECML PKDD 2022. Communications in Computer and Information Science, vol 1752. Springer, Cham. https://doi.org/10.1007/978-3-031-23618-1_17
+
+Workshop version of the manuscript is also available here: 
+http://www.di.uniba.it/~mignone/NFMCP/papers/NFMCP2022_paper_6705.pdf
